--- a/train2sgf.ipynb
+++ b/train2sgf.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\" Read training data files and produces data labels, statistics on policy and sgf: \n",
+    "\"\"\" Read training data files and produces data labels and statistics on policy, and sgf files: \n",
     "\n",
     "    # Position meta-data:\n",
     "    chunk_id:          chunk number within training file\n",
@@ -19,6 +19,7 @@
     "    move_count:        move count, floored by 20\n",
     "    side_to_play:      color to play (Black/White)\n",
     "    played_by:         move belongs to winner/loser of the game\n",
+    "    picked_move        board coordinate of move picked by temperature\n",
     "    \n",
     "    # Policy statistics:\n",
     "    p_picked_raw       policy of picked move, raw\n",
@@ -44,20 +45,22 @@
     "\n",
     "\"\"\" USAGE\n",
     "    . Download and unzip a training data file from https://leela.online-go.com/training/\n",
-    "    . In \"__main__\", configure 'main_path' and 'training_id' with the chosen network hash.\n",
+    "    . In \"__main__\", configure 'main_path'. And 'training_id' with the chosen network hash (ex.: '68824bbc')\n",
     "    . Select a bunch of training data chunks ('train_68824bbc_XXXX.gz' e.g.), unzip and save them\n",
     "      in a directory having the same name as training file (e.g. 'C:/main_path/train_68824bbc/').\n",
-    "    . Practically, 100 chunks correspond to 3200 games and a 600k+ line csv table still manipulable with Excel.\n",
+    "      100 chunks correspond to 3200 games and a csv table of 550k-700k positions, manipulable with Excel\n",
     "    . This script assumes there is a series of unzipped training chunks (e.g. 'train_68824bbc_2500')\n",
     "      in the here above mentioned directory. Also, it assumes chunks are of consecutive numbers and there is\n",
     "      no other files in the directory but the chunks.\n",
-    "    . If first chunk is not chunk 0, or if you wish to start decoding with another chunk than chun 0,\n",
-    "      indicate in \"__main__\" the number of start 'chunk_id' (0 by default). \n",
-    "    . Script can be terminated at any time as sgf are created on the fly and stats are written into the csv file\n",
-    "      in append mode.\n",
-    "    . Games and stats table are created in a directory named per train_id name with '_output' extension.\n",
-    "      The script assumes that directory does not exist or is empty.\n",
-    "    . For debug purpose, set verbosity to True.\n",
+    "    . If first chunk is not chunk 0, or if you wish to start decoding with another chunk, indicate in \"__main__\"\n",
+    "      the 'start_chunk_id'. Script can be terminated at any time as sgf are created on the fly and stats are\n",
+    "      written to the csv file in append mode.\n",
+    "    . Games and stats table are created in a directory named as train_id with '_output' extension.\n",
+    "    . Line 69/70, set decimal separator.\n",
+    "    . For debug, set verbosity to True.\n",
+    "    . NB: due to comments inserted after each move, these sgf cannot be back-processed with 'dump_supervised'\n",
+    "      command with LZ in console mode. Need to strip comments and add result ('RE[B+Resign]' e.g.)\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "verbosity = False\n",
@@ -73,9 +76,10 @@
     "\n",
     "p_floor, c_floor = 0.02, 20   # Policy and move count/game length floor values (2% and 20 moves resp.)\n",
     "\n",
-    "decimal_sep = ','\n",
-    "# decimal_sep = '.'\n",
-    "stat_header = 'chunk_id;game_id;game_length_raw;game_length;move_count_raw;move_count;side_to_play;played_by;p_picked_raw; p_picked;picked_rank;p_max_raw;p_max;p_best5_raw;p_best5;p_best10_raw;p_best10;p_pass_raw;p_pass;pass_rank;norm_cost_raw;norm_cost\\n'\n",
+    "# decimal_sep = ','             \n",
+    "decimal_sep = '.'       #  <=== To be customized\n",
+    "\n",
+    "stat_header = 'chunk_id;game_id;game_length_raw;game_length;move_count_raw;move_count;side_to_play;played_by;picked_move;p_picked_raw; p_picked;picked_rank;p_max_raw;p_max;p_best5_raw;p_best5;p_best10_raw;p_best10;p_pass_raw;p_pass;pass_rank;norm_cost_raw;norm_cost\\n'\n",
     "\n",
     "alphanum_board = 'ABCDEFGHJKLMNOPQRST'\n",
     "alphanum_sgf   = 'abcdefghijklmnopqrs'\n",
@@ -143,14 +147,18 @@
     "        \n",
     "        # Convert input planes hex strings into next position text strings for Black and White\n",
     "        self.black_next, self.white_next = '', ''\n",
-    "        for i in range(len(next_black_hex)):\n",
+    "        for i in range(len(next_black_hex)-1):\n",
     "            self.black_next += str2black[next_black_hex[i]]\n",
     "            self.white_next += str2white[next_white_hex[i]]\n",
+    "        i += 1\n",
+    "        self.black_next += 'X' if next_black_hex[i] == '1' else '.'\n",
+    "        self.white_next += 'O' if next_white_hex[i] == '1' else '.' \n",
+    "\n",
     "        if verbosity: \n",
     "            print('self.black_next:\\n', self.black_next)\n",
     "            print('self.white_next:\\n', self.white_next)\n",
     "            \n",
-    "        # If next training sample is the first position of a new game:\n",
+    "        # If next training sample is the first position of a nestr2black[w game:\n",
     "        if self.training.got_new_game:\n",
     "            if verbosity: print('Got new game')\n",
     "            self.picked_flat =  None   # Picked move flat coordinates\n",
@@ -205,6 +213,7 @@
     "        policy = list(zip([float(p) for p in self.sample[17: 379]] , list(range(362)))) \n",
     "\n",
     "        if self.training.got_new_game:  # Append 'NA' for:\n",
+    "            self.stat.append('NA')                            # picked_move (board coordinate)\n",
     "            self.stat.append('NA')                            # p_picked_raw\n",
     "            self.stat.append('NA')                            # p_picked (floored)\n",
     "            self.stat.append('NA')                            # picked_rank\n",
@@ -212,6 +221,7 @@
     "        else:\n",
     "            p_picked = policy[self.picked_flat][0]\n",
     "            self.norm_cost_next = 1 - p_picked                # norm_cost of next position\n",
+    "            self.stat.append(self.picked_board)               # picked_move (board coordinate)\n",
     "            self.stat.append(p_picked)                        # p_picked_raw \n",
     "            self.stat.append(floored(p_picked, p_floor))      # p_picked (floored)\n",
     "        \n",
@@ -365,15 +375,14 @@
     "        \n",
     "        for i in range(self.move_count):\n",
     "            game_stat_line += game_stat_prefix\n",
-    "            for j in range(18):\n",
-    "                game_stat_line += ';' + str(self.stat[18 * i + j]).replace(\".\", decimal_sep)\n",
+    "            for j in range(19):\n",
+    "                game_stat_line += ';' + str(self.stat[19 * i + j]).replace(\".\", decimal_sep)\n",
     "            game_stat_line += '\\n'\n",
     "        \n",
     "#         print('Appending game statistics to ',stat_filename,' ......')\n",
     "        with open(self.stat_filename,'a') as f:\n",
     "            f.write(game_stat_line)\n",
     "        \n",
-    " \n",
     "    \n",
     "class Training:\n",
     "    \"\"\" A chunk correspond to a training file chunk (must be manually unzipped in place before use of this script).\n",
@@ -426,7 +435,7 @@
     "        else:\n",
     "            self.got_new_chunk = False\n",
     "        \n",
-    "        self.sample_id += 1                  # Increment sample index\n",
+    "        self.sample_id += 1                      # Increment sample index\n",
     "        start = self.sample_id * 380\n",
     "        self.sample = self.chunk[start : start + 380]  # Updating sample.\n",
     "\n",
@@ -453,29 +462,23 @@
     "        print('{:3d}: {:8.7f}'.format(361, float(training.sample[378])))\n",
     "        print('Played by:')\n",
     "        print('{:3d}: '.format(379), training.sample[379])\n",
-    "                  \n",
-    "\n",
-    "\n",
+    "        \n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    \n",
     "    # Selecting training data file:\n",
     "    # ----------------------------\n",
     "    # train_id = '62b5417b'   # Training hash ELF v0\n",
-    "    # train_id = '7ff174e6'   # Training hash from LZ156 - 18-Jul-2018\n",
-    "    # train_id = 'dc011d01'   # Training hash from LZ158 - 2018-Aug-02 07:02\n",
     "    # train_id = 'd13c4099'   # Training hash ELF v1\n",
-    "    # train_id = 'dec5b9d8'   # Training hash from LZ177 - 18-Sep-2018\n",
-    "    # train_id = '68824bbc'   # Training hash from LZ181 - 29-Sep-2018\n",
-    "    train_id = '68d7c8fc'     # Training hash from LZ182 - 17-Oct-2018       # To be customized\n",
+    "    # train_id = '2da87ea8'   # Training hash from LZ184 - 26-Oct-2018\n",
+    "    train_id = 'f50dc27c'   #  Training hash from LZ186                   #  <=== To be customized\n",
     "    \n",
     "    \n",
-    "\n",
     "    training_name = 'train_' + train_id\n",
     "\n",
     "    # Creating output directory for stats and sgf:\n",
     "    # -------------------------------------------    \n",
-    "    main_path = 'C:/Users/My_name/Downloads/'                            # To be customized\n",
+    "    main_path = 'C:/Users/Username/Downloads/'                            #  <=== To be customized\n",
     "    output_directory = main_path + training_name + '_output/'\n",
     "    stat_filename = output_directory + training_name + '_stats.csv'\n",
     "    directory = os.path.dirname(stat_filename)\n",
@@ -493,7 +496,7 @@
     "    # Looping over training data:\n",
     "    # --------------------------\n",
     "\n",
-    "    training = Training(main_path, train_id, chunk_id = 0)                   # To be customized (optional)\n",
+    "    training = Training(main_path, train_id, chunk_id = 0)\n",
     "    training.get_sample()\n",
     "    if verbosity: training.raw_print()\n",
     "    position = Position(training, output_directory, stat_filename)\n",
